# lo-fi-delay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audio_input_dma.cpp  audio_input_dma.h  build-firmware.sh  delay_app.cpp  delay_app.h  delay_engine.cpp  delay_engine.h  lo-fi-delay-pico-2.uf2  main.cpp  update-sdk.sh  wd-dma-migration-plan.md  wd-dma-phase-todo.md
firmware/: delay_app.cpp  delay_app.h  delay_engine.cpp  delay_engine.h  fast_dac_out.cpp  fast_dac_out.h
src/: audio_input_dma.cpp  audio_input_dma.h  delay_app.cpp  delay_app.h  delay_engine.cpp  delay_engine.h  fast_dac_out.cpp  fast_dac_out.h  unified_adc_dma.cpp  unified_adc_dma.h
